# Blaze2D

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/Blaze2D/: App.h  Core.h
include/Blaze2D/graphics/: Atlas.h
include/Blaze2D/internal/: SDLManager.h
include/Blaze2D/ui/: Container.h
include/Blaze2D/util/: Color.h  Manifest.h  Rect.h  Vec.h
include/Blaze2D/window/: Window.h
include/blaze/internal/: SDLManager.h
src/: App.cpp  Core.cpp
src/graphics/: Atlas.cpp
src/internal/: SDLManager.cpp
src/ui/: Container.cpp
src/util/: Color.cpp  Manifest.cpp
src/window/: Window.cpp
tests/: CMakeLists.txt  test_app.cpp  test_core.cpp  test_manifest.cpp
tests/test_media/: AtlasTest.json
